--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,9 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "react/button-has-type": [0],
+    "import/prefer-default-export": 0,
+    "react/function-component-definition": [0],
     "react/prop-types": [0],
     "no-console": "off",
     "no-restricted-syntax": [
