--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,22 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "jsx-a11y/no-static-element-interactions": [
+      "error",
+      {
+        "handlers": [
+          "onClick",
+          "onMouseDown",
+          "onMouseUp",
+          "onKeyPress",
+          "onKeyDown",
+          "onKeyUp"
+        ],
+        "allowExpressionValues": false
+      }
+    ],
+
+    "react/jsx-props-no-spreading": "off",
     "react/jsx-no-constructed-context-values": 0,
     "react/button-has-type": [0],
     "import/prefer-default-export": 0,
