add eslint, add defaultsControllers.js, add usersControllers.js, add router, add db.js

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -9,7 +9,9 @@
     "sourceType": "module"
   },
   "rules": {
+    "radix": "off",
     "no-console": "off",
+    "camelcase": "off",
     "no-restricted-syntax": [
       "error",
       {
