add verifyPassword and verifyToken in auth.js, rename id routes, add getUserByCpWithPasswordAndPassToNext in usersControllers.js, auth wall, i jwt, add JWT_secret in .env.sample

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -9,6 +9,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "prefer-destructuring": [0],
     "import/no-unresolved": [0],
     "radix": "off",
     "no-console": "off",
