--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "no-unused-vars": [0],
     "camelcase": "off",
     "jsx-a11y/no-static-element-interactions": [
       "error",
