--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "reactjs-popup": "^2.0.5",
     "template-fullstack": "file:..",
     "typewriter-effect": "^2.19.0"
   },
