creat firebase.jsx; modification postDefaults in AxiosDefaults.js, modification GareEtConnexions.jsx; add props in Input.jsx; modification DefaultCard.jsx; Install uuid; Install firebase; add firebase in env.sample

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,10 @@
 # call it in React with import.meta.env.VITE_BACKEND_URL
 VITE_BACKEND_URL=http://localhost:5000
+
+# firebase.jsx
+VITE_APIKEY=your_api_key
+VITE_AUTHDOMAIN=your_authdomain
+VITE_PROJECTID=your_projectid
+VITE_STORAGEBUCKET=your_storagebucket
+VITE_MESSAGINGSENDERID=your_messagesenderid
+VITE_APPID=your_appid
