--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "jsx-a11y/img-redundant-alt": [0],
     "import/no-cycle": [0],
     "no-unused-vars": [0],
     "camelcase": "off",
