--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "no-useless-escape": "off",
     "prefer-destructuring": [0],
     "jsx-a11y/img-redundant-alt": [0],
     "import/no-cycle": [0],
