--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -18,6 +18,7 @@
   "plugins": ["react", "import"],
   "rules": {
     "no-useless-escape": "off",
+    "no-alert": "off",
     "prefer-destructuring": [0],
     "jsx-a11y/img-redundant-alt": [0],
     "import/no-cycle": [0],
