css item + function onclick + on key + zoom

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -35,7 +35,7 @@
           "onKeyDown",
           "onKeyUp"
         ],
-        "allowExpressionValues": false
+        "allowExpressionValues": true
       }
     ],
 
