--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -9,6 +9,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "import/no-extraneous-dependencies": [0],
     "prefer-destructuring": [0],
     "import/no-unresolved": [0],
     "radix": "off",
