--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "firebase": "^9.10.0",
+    "joi": "^17.7.0",
+    "joi-password": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.8.0"
   }
